--- a/exampleSite/config.yaml
+++ b/exampleSite/config.yaml
@@ -1,10 +1,13 @@
-baseURL: "/"
+theme: "hugo-library"
+baseURL: "http://localhost:4321/"
 defaultContentLanguage: "no"
 defaultContentLanguageInSubdir: true
 disableFastRender: true
 disablePathToLower: true
 languages:
   "no":
+    title: "INN-arkivet"
+    weight: 1
     contentDir: "content/no"
     disabled: false
     languageCode: nn-NO
@@ -18,15 +21,15 @@ languages:
       - name: Arkivet
         url: "/no/archive"
         weight: 20
-      - name: Engelsk
+      - name: English
         identifier: "change-lang"
         url: "en"
         weight: 30
     params:
-      subtitle: eit Cristin-bibliotek for INN
-    title: Arkivet
-    weight: 1
+      subtitle: eit Zotero-bibliotek for INN
   en:
+    title: The INN Archive
+    weight: 2
     contentDir: "content/en"
     disabled: false
     languageCode: en-US
@@ -37,7 +40,7 @@ languages:
       - name: Overview
         url: "/en/overview"
         weight: 10
-      - name: Arkivet
+      - name: Archive
         url: "/en/archive"
         weight: 20
       - name: Norsk
@@ -45,9 +48,8 @@ languages:
         url: "no"
         weight: 30
     params:
-      subtitle: a Cristin library for INN
-    title: The Archive
-    weight: 2
+      subtitle: a Zotero library for INN
+      footer: Bam!
 
 markup:
   goldmark:
@@ -69,7 +71,20 @@ taxonomies:
   tag: "tags"
 
 params:
-  version: "1.0"
+  version: "0.1.1"
+  subfolder: "/"
+  keywords: 
+  - "Hugo"
+  - "theme"
+  - "library"
+  - "Zotero"
+  description: "Hugo Library theme"
+  customJS: []
+  customCSS: []
+  CDN: 
+  - "https://cdn.jsdelivr.net/npm/line-awesome@1.3.0/dist/line-awesome/css/line-awesome.min.css"
+  - "https://cdn.jsdelivr.net/npm/pako@2.1.0/dist/pako.min.js"
+  - "https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"
   charts:
     - "about"
     - "sdg_doughnut"
